--- a/index.html
+++ b/index.html
@@ -79,8 +79,9 @@ https://www.tooplate.com/view/2125-artxibition
             <div class="row">
                 <div class="col-lg-12">
                     <div class="main-content">
-                        <img src="assets/images/logo.png" alt="logo" style="height: 300px; margin-top: -10px;"> 
-                        <h2 style="margin-bottom: 0px;">BWC FUN DIVE</h2>
+                       <img src="assets/images/logo.png" alt="logo" style="height: 300px; margin-top: -10px;"> 
+                     
+                       <h2 style="margin-bottom: 0px;">BWC FUN DIVE</h2>
                         <h6 style="margin-top: 0px;">explore</h6>
                     </div>
                 </div>
@@ -89,41 +90,42 @@ https://www.tooplate.com/view/2125-artxibition
     </div>
     <!-- ***** Main Banner Area End ***** -->
 
-    <!-- *** Owl Carousel Items ***-->
-    <div class="show-events-carousel">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="owl-show-events owl-carousel">
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-01.jpg" alt=""></a>
-                        </div>
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-02.jpg" alt=""></a> 
-                        </div>
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-03.jpg" alt=""></a> 
-                        </div>
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-04.jpg" alt=""></a> 
-                        </div>
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-01.jpg" alt=""></a> 
-                        </div>
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-02.jpg" alt=""></a> 
-                        </div>
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-03.jpg" alt=""></a> 
-                        </div>
-                        <div class="item">
-                            <a href="#"><img src="assets/images/show-events-04.jpg" alt=""></a> 
-                        </div>
+  <!-- *** Owl Carousel Items ***-->
+  <div class="show-events-carousel">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="owl-show-events owl-carousel">
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a>
+                    </div>
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
+                    </div>
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a> 
+                    </div>
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
+                    </div>
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a> 
+                    </div>
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
+                    </div>
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-03.jpg" alt=""></a> 
+                    </div>
+                    <div class="item">
+                        <a href="event-details.html"><img src="assets/images/show-events-04.jpg" alt=""></a> 
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
+
 
     
     <!-- *** Amazing Venus ***-->
