--- a/index.html
+++ b/index.html
@@ -80,7 +80,6 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-12">
                     <div class="main-content">
                        <img src="assets/images/logo.png" alt="logo" style="height: 300px; margin-top: -10px;"> 
-                     
                        <h2 style="margin-bottom: 0px;">BWC FUN DIVE</h2>
                         <h6 style="margin-top: 0px;">explore</h6>
                     </div>
@@ -237,7 +236,7 @@ https://www.tooplate.com/view/2125-artxibition
                                 <p >(shared with other participants)</p>
                                 <ul>
                                     <li><i class="fa fa-ship"></i>1</li>
-                                    <li><i class="fa fa-user"></i>10</li>
+                                    <li><i class="fa fa-user"></i>7</li>
                                 </ul>
                                 <div class="price">
                                     <span>Package<br>from <em>IDR.1.3M</em></span>
@@ -269,23 +268,32 @@ https://www.tooplate.com/view/2125-artxibition
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-01.jpg" alt=""></a>
+                            <a href="event-details.html"><img src="assets/images/event-02.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
                             <a href="event-details.html"><h4>INTRODUCTION DIVING</h4></a>
                             <p>This package is perfect for beginners who are trying diving for the first time.</p>
+                            <br>
+                            <div class="price">
+                                <span>Package<br>from <em>IDR.1.5M</em></span>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="event-item">
                         <div class="thumb">
-                            <a href="event-details.html"><img src="assets/images/event-02.jpg" alt=""></a>
+                            <a href="event-details.html"><img src="assets/images/event-01.jpg" alt=""></a>
                         </div>
                         <div class="down-content">
                             <a href="event-details.html"><h4>Night Diving</h4></a>
                             <p>Discover the underwater world in a whole new light as you explore the vibrant marine life that comes alive at night.</p>
+                            <br>
+                            <div class="price">
+                                <span>Package<br>from <em>IDR.700k</em></span>
+                            </div>
                         </div>
+                        
                     </div>
                 </div>
             </div>
